--- a/src/app/ui/books/books-list/books.component.css
+++ b/src/app/ui/books/books-list/books.component.css
@@ -1,118 +1,6 @@
 .books_parent {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #f3f3f3;
-  flex-direction: row;
-
+  background: #F8F9FA;
 }
-
-.books_child {
-  padding: 5pt;
-  display: flex;
-  flex-direction: column;
-  background-color: #e4e4fd;
-  margin: 10pt;
-  width: 200pt;
-  height: auto;
-}
-
-.team-boxed {
-  color: #313437;
-  background-color: #eef4f7;
-  margin-top: auto;
-
-}
-
-.team-boxed p {
-  color: #7d8285;
-}
-
-.team-boxed h2 {
-  font-weight: bold;
-  margin-bottom: 40px;
-  padding-top: 40px;
-  color: inherit;
-}
-
-@media (max-width: 767px) {
-  .team-boxed h2 {
-    margin-bottom: 25px;
-    padding-top: 25px;
-    font-size: 24px;
-  }
-}
-
-.team-boxed .intro {
-  font-size: 16px;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.team-boxed .intro p {
-  margin-bottom: 0;
-}
-
-.team-boxed .people {
-  padding: 50px 0;
-}
-
-.team-boxed .item {
-  text-align: center;
-}
-
-.team-boxed .item .box {
-  text-align: center;
-  padding: 30px;
-  background-color: #fff;
-  margin-bottom: 30px;
-}
-
-.team-boxed .item .name {
-  font-weight: bold;
-  margin-top: 28px;
-  margin-bottom: 8px;
-  color: inherit;
-}
-
-.team-boxed .item .title {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #d0d0d0;
-  letter-spacing: 2px;
-  font-size: 13px;
-}
-
-.team-boxed .item .description {
-  font-size: 15px;
-  margin-top: 15px;
-  margin-bottom: 20px;
-}
-
-.team-boxed .item img {
-  max-width: 160px;
-}
-
-.team-boxed .social {
-  font-size: 18px;
-  color: #a2a8ae;
-}
-
-.team-boxed .social a {
-  color: inherit;
-  margin: 0 10px;
-  display: inline-block;
-  opacity: 0.7;
-}
-
-.team-boxed .social a:hover {
-  opacity: 1;
-}
-
-.box p {
-  text-align: justify;
-
-}
-
 .page-link {
   cursor: pointer;
 }
@@ -131,8 +19,25 @@
 }
 
 
-.itemBookInfo {
+.card {
+  margin: 5pt;
+  width: 15rem;
+}
 
+.card-customGroup {
+  padding-top: 20pt;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
 
 }
+
+.button-info {
+  margin-top: 10pt;
+  width: 100%;
+  margin-bottom: 10pt;
+}
+
 
